# OOPSZILAB

./: README.md
Lab1/: CMakeLists.txt
Lab1/Lab1/: CMakeLists.txt
Lab1/Lab1/src/: Task1.c  Task2.c  Task3.c  Task4.c  Task5_func.c  Task5_main.c  Task6_func.c  Task6_main.c  Task7_func.c  Task7_main.c  func.h
Lab2/: CMakeLists.txt
Lab2/Lab2/: CMakeLists.txt
Lab2/Lab2/src/: Task1.c  Task2.c  Task3.c
Lab3/: CMakeLists.txt
Lab3/Lab3/: CMakeLists.txt
Lab3/Lab3/src/dowhile/: Header.h  Task1_dowhile.c  Task2_dowhile.c  Task3_dowhile.c  Task4_dowhile.c  Task5_dowhile.c  Task6_dowhile.c
Lab3/Lab3/src/for/: Task1_for.c  Task2_for.c  Task3_for.c  Task4_for.c  Task5_for.c  Task6_for.c
Lab3/Lab3/src/while/: Task1_while.c  Task2_while.c  Task3_while.c  Task4_while.c  Task5_while.c  Task6_while.c
Lab4/: CMakeLists.txt
Lab4/Lab4/: CMakeLists.txt
Lab4/Lab4/src/: Complex.cpp  Complex.h  main.cpp
Lab5/: CMakeLists.txt
Lab5/Lab5/: CMakeLists.txt
Lab5/Lab5/src/: Queue.cpp  Queue.h  QueueTemplate.h
Lab6/: CMakeLists.txt
Lab6/Lab6/: CMakeLists.txt
Lab6/Lab6/src/: BidirectionalCircularList.h  Node.h  QueueBase.h  QueueBaseOnArray.h  QueueBasedOnBidirectionalCircularList.h
